# candy

./: CMakeLists.txt  LICENSE  README.md
cmake/: compiler.cmake  gtest.cmake
include/: algorithm.hpp  design_pattern.hpp  portable.hpp  typelist.hpp  utility.hpp
include/design_pattern/: abstract_factory.hpp  factory_method.hpp  hierarchy.hpp
include/portable/: compiler.hpp  cxx.hpp
include/typelist/: accumulate.hpp  all_of.hpp  any_of.hpp  at.hpp  back.hpp  concat.hpp  count.hpp  empty.hpp  erase.hpp  find.hpp  front.hpp  insert.hpp  merge.hpp  none_of.hpp  pop_back.hpp  pop_front.hpp  push_back.hpp  push_front.hpp  remove.hpp  replace.hpp  reverse.hpp  size.hpp  sort.hpp  transform.hpp  typelist.hpp  unique.hpp
include/utility/: array_size.hpp  compare.hpp  if_then_else.hpp  owner.hpp  range.hpp  type.hpp
test/: CMakeLists.txt
test/design_pattern/: CMakeLists.txt  abstract_factory_test.cpp  factory_method_test.cpp
test/typelist/: CMakeLists.txt  accumulate_test.cpp  all_of_test.cpp  any_of_test.cpp  at_test.cpp  back_test.cpp  concat_test.cpp  count_test.cpp  empty_test.cpp  erase_test.cpp  find_test.cpp  front_test.cpp  insert_test.cpp  none_of_test.cpp  pop_back_test.cpp  pop_front_test.cpp  push_back_test.cpp  push_front_test.cpp  remove_test.cpp  replace_test.cpp  reverse_test.cpp  size_test.cpp  sort_test.cpp  transform_test.cpp  unique_test.cpp
